syntax = "proto3";

// protobuf的package，根据业务来定，一个文件夹下的package得是一样的
package goods;

// 和package保持一致
option go_package = "goods";

// 导入需要使用的文件，package/文件名

import "goods/goods.proto";
import "goods/search.proto";
import "goods/cart.proto";
import "goods/category.proto";

service GoodsService {

    // 获取关键词下拉列表
    rpc GetKeywordDownList(GetKeywordDownListReq) returns(GetKeywordDownListRsp){}

    // 根据 关键词 和 搜索参数 和 过滤参数 搜索
    rpc SearchSpuList(SearchSpuListReq) returns (SearchSpuListRsp){}

    // 获取单个商品详情 sku + spu
    rpc GetGoodsDetail(GetGoodsDetailReq) returns (GetGoodsDetailRsp){} 

    // 获取商品列表详情 sku + spu
    rpc GetGoodsList(GetGoodsListReq) returns (GetGoodsListRsp){}

    // 获取商品分类
    rpc GetCategoryList(GetCategoryListReq) returns (GetCategoryListRsp){}

    // 添加到购物车
    rpc AddToCart(AddToCartReq) returns (AddToCartRsp){}

    // 发布商品 
    rpc PublishGoods(PublishGoodsReq) returns (PublishGoodsRsp){}

}

