syntax = "proto3";

package goods;

option go_package = "goods";

import "goods/common.proto";

// 获取关键词下拉列表
message GetKeywordDownListReq {
    string prefix = 1;
}

message GetKeywordDownListRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetKeyDownListRspData data = 4;
    message GetKeyDownListRspData {
        repeated BaseKeyword keyword_list = 1;
    }
}

// 分页搜索商品列表
message SearchSpuListReq {
    
    int32 page_size = 1;
    int32 page_no = 2;

    string keyword = 3; // 关键词

    repeated uint64 category_ids = 4;//分类id
    repeated uint64 brand_ids = 5; // 品牌id

    string order_by = 6;    // 排序字段
}

message SearchSpuListRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    SearchSpuListRspData data = 4;
    message SearchSpuListRspData {
        repeated BaseSpu spu_list = 1;
        int32 page_size = 2;
        int32 page_no = 3;
        int32 count = 4;
    }
}